# daihentai

./: .gitignore  Cargo.toml  bin.rs
src/: api.rs  book.rs  config.rs  consts.rs  errors.rs  gallery.rs  http.rs  lib.rs  main.rs  parser.rs
src/model/: book.rs  gallery.rs  mod.rs
src/utils/: mod.rs  parser.rs
