[package]
name = "daihentai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.23"}
serde_json = { version = "1.0.88"}
serde = {version = "1.0.147", features = ["derive"] }